Change node v + fix rendering 3d on small screens

--- a/styles.scss
+++ b/styles.scss
@@ -76,7 +76,7 @@ button h2 {
 }
 
 .trois {
-    @apply invisible md:visible;
+    @apply hidden md:block;
 }
 
 #waves2 {
